smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-namespace.smithy
// Parse error at line 4, column 11 near `smithy.api`: Invalid shape ID: smithy.api
$version: "0.2.0"

use shape smithy.api
